[package]
name = "nmea2000"
version = "0.2.0"
edition = "2024"
description = "An NMEA 2000 library"
keywords = ["nmea2000", "n2k"]
categories = ["no-std", "embedded"]
license = "MIT"
repository = "https://github.com/akeamc/nmea2000"

[dependencies]
bytes = { version = "1.10.0", default-features = false }
embedded-can = { git = "https://github.com/rust-embedded/embedded-hal", version = "0.4.1" }
generic-array = "1.2.0"
