[package]
name = "nmea2000"
version = "0.3.0-beta.0"
edition = "2021"
description = "An NMEA 2000 library"
keywords = ["nmea2000", "n2k"]
categories = ["no-std", "embedded"]
license = "MIT"
repository = "https://github.com/akeamc/nmea2000"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embassy-futures = { version = "0.1.1", optional = true }
embassy-sync = { version = "0.6.2", optional = true }
embassy-time = { version = "0.4.0", optional = true }
embedded-can = "0.4.1"
generic-array = "1.2.0"
heapless = "0.8.0"

[features]
default = ["client"]
client = ["dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures"]
defmt = ["dep:defmt", "heapless/defmt-03"]

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"] }
embassy-executor = { version = "0.7.0", features = ["arch-std", "executor-thread"] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6.2", features = ["std"] }
embassy-time = { version = "0.4.0", features = ["std"] }
static_cell = "2.1.0"
